[package]
name = "dailyzonereporter"
version = "0.1.0"
authors = ["jvol jvolizka <jvolizka@jvol.gay>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.9", features = ["json" , "blocking"] } 
futures = "0.3.8"
tokio = {"version"="0.2.22", features=["full"]}
serde = "1.0.117"
serde_json = "1.0.59"
serde_derive = "1.0.117"
flate2 = "1.0.19"